--- a/tools/dbus_interface.c.j2
+++ b/tools/dbus_interface.c.j2
@@ -67,12 +67,48 @@ public:
             { "{{method.name}}", fibre::FunctionImplTable{} },
 {%- endfor %}
         } {}
+        std::unordered_map<fibre::dbus_type_id_t, size_t> ref_count{}; // keeps track of how often a given type has been registered
+
+        template<typename ... TArgs>
+        using signal_closure_t = fibre::Closure<void(fibre::DBusConnectionWrapper::*)(std::string, fibre::DBusObjectPath, TArgs...), std::tuple<fibre::DBusConnectionWrapper*, std::string, fibre::DBusObjectPath>, std::tuple<TArgs...>, void>;
+
+        template<typename ... TArgs>
+        using signal_table_entry_t = std::pair<signal_closure_t<TArgs...>, void(*)(void*, signal_closure_t<TArgs...>&)>;
+
+{%- for signal in interface.signals %}
+        std::unordered_map<std::string, signal_table_entry_t<{{arg_list_t(signal.args)}}>> {{signal.name}}_callbacks{};
+{%- endfor %}
 
         template<typename TImpl>
-        int register_implementation(TImpl& obj) {
+        void register_implementation(fibre::DBusConnectionWrapper& conn, fibre::DBusObjectPath path, TImpl& obj) {
+            if (ref_count[fibre::get_type_id<TImpl>()]++ == 0) {
 {%- for method in interface.methods %}
-            (*this)["{{method.name}}"].insert({fibre::get_type_id<TImpl>(), [](void* obj, DBusMessage* rx_msg, DBusMessage* tx_msg){ return fibre::DBusConnectionWrapper::handle_method_call_typed(rx_msg, tx_msg, fibre::make_tuple_closure(&TImpl::{{method.name}}, (TImpl*)obj, (std::tuple<{{arg_list_t(method.outputs)}}>*)nullptr)); {{'}})'}};
+                (*this)["{{method.name}}"].insert({fibre::get_type_id<TImpl>(), [](void* obj, DBusMessage* rx_msg, DBusMessage* tx_msg){ return fibre::DBusConnectionWrapper::handle_method_call_typed(rx_msg, tx_msg, fibre::make_tuple_closure(&TImpl::{{method.name}}, (TImpl*)obj, (std::tuple<{{arg_list_t(method.outputs)}}>*)nullptr)); {{'}})'}};
 {%- endfor %}
+            }
+{%- for signal in interface.signals %}
+            obj.{{signal.name}} += &({{signal.name}}_callbacks.insert({path + " @ " + conn.get_name(), {fibre::make_closure(&fibre::DBusConnectionWrapper::emit_signal<{{interface_name}}{{arg_list_ct(signal.args)}}>, &conn).bind(std::string("{{signal.name}}")).bind(path), [](void* ctx, signal_closure_t<{{arg_list_t(signal.args)}}>& cb){ ((TImpl*)ctx)->{{signal.name}} -= &cb; } } }).first->second.first);
+{%- endfor %}
+        }
+
+        int deregister_implementation(fibre::DBusConnectionWrapper& conn, fibre::DBusObjectPath path, void* obj, fibre::dbus_type_id_t type_id) {
+{%- for signal in interface.signals %}
+            {
+                auto it = {{signal.name}}_callbacks.find(path + " @ " + conn.get_name());
+                it->second.second(obj, it->second.first);
+                {{signal.name}}_callbacks.erase(it);
+            }
+{%- endfor %}
+            auto it = ref_count.find(type_id);
+            if (it == ref_count.end()) {
+                return -1;
+            }
+            if (--(it->second) == 0) {
+{%- for method in interface.methods %}
+                (*this)["{{method.name}}"].erase((*this)["{{method.name}}"].find(type_id));
+{%- endfor %}
+                ref_count.erase(it);
+            }
             return 0;
         }
     };
