[dbus] return properties from object manager [bluetooth] publish connectable GATT service

--- a/tools/dbus_interface.c.j2
+++ b/tools/dbus_interface.c.j2
@@ -38,6 +38,7 @@
 {% set interface_name = interface.name | replace('.', '_') %}
 class {{interface_name}} {
 public:
+    struct tag {};
     static const char* get_interface_name() { return "{{interface.name}}"; }
 
     {{interface_name}}(fibre::DBusRemoteObjectBase* base)
