--- a/tools/dbus_interface.c.j2
+++ b/tools/dbus_interface.c.j2
@@ -1,7 +1,7 @@
 #ifndef __INTERFACES__{{output_name | replace('.', '_') | upper}}
 #define __INTERFACES__{{output_name | replace('.', '_') | upper}}
 
-#include <fibre/dbus.hpp>
+#include <fibre/platform_support/dbus.hpp>
 #include <fibre/closure.hpp>
 #include <vector>
 
