--- a/cpp/interfaces_template.j2
+++ b/cpp/interfaces_template.j2
@@ -23,7 +23,7 @@ void
 [%- elif func.out | length == 1 -%]
 [[(func.out.values() | first).type.c_name]]
 [%- else -%]
-[% for arg in func.out.values() %][[arg.type]][[', ' if not loop.last]][% endfor %]
+std::tuple<[% for arg in func.out.values() %][[arg.type.c_name]][[', ' if not loop.last]][% endfor %]>
 [%- endif -%]
 [%- endmacro %]
 
