--- a/cpp/interfaces_template.j2
+++ b/cpp/interfaces_template.j2
@@ -12,7 +12,7 @@
 #ifndef __FIBRE_INTERFACES_HPP
 #define __FIBRE_INTERFACES_HPP
 
-#include <fibre/protocol.hpp>
+#include <fibre/../../protocol.hpp>
 
 #pragma GCC push_options
 #pragma GCC optimize ("s")
