fix various bugs

--- a/cpp/endpoints_template.j2
+++ b/cpp/endpoints_template.j2
@@ -15,6 +15,7 @@
 
 #include <fibre/introspection.hpp>
 #include <fibre/../../legacy_protocol.hpp>
+#include <fibre/../../crc.hpp>
 
 // Note: with -Og the functions with large switch statements reserves a huge amount
 // of stack space because they reserves separate space for the stack frame of each
