--- a/interfaces_template.j2
+++ b/interfaces_template.j2
@@ -12,7 +12,9 @@
 #ifndef __FIBRE_INTERFACES_HPP
 #define __FIBRE_INTERFACES_HPP
 
-#include <fibre/protocol.hpp>
+[[userdata.c_preamble]]
+
+#include <fibre/../../protocol.hpp>
 
 #pragma GCC push_options
 #pragma GCC optimize ("s")
@@ -23,12 +25,12 @@ void
 [%- elif func.out | length == 1 -%]
 [[(func.out.values() | first).type.c_name]]
 [%- else -%]
-[% for arg in func.out.values() %][[arg.type]][[', ' if not loop.last]][% endfor %]
+std::tuple<[% for arg in func.out.values() %][[arg.type.c_name]][[', ' if not loop.last]][% endfor %]>
 [%- endif -%]
 [%- endmacro %]
 
 [%- macro render_interface(intf) %]
-class [[intf.name | to_pascal_case]]Intf {
+class [[intf.name | to_pascal_case]]Intf[% if intf.implements %] :[%- for base_intf in intf.implements %] public [[base_intf.c_name]][% endfor %][% endif %] {
 public:
 [%- for intf in intf.interfaces -%]
 [[render_interface(intf) | indent(4)]]
@@ -36,7 +38,7 @@ public:
 [%- for enum in intf.enums %]
     enum [[enum.name | to_pascal_case]] {
 [%- for k, value in enum['values'].items() %]
-        [[((enum.name + k) | to_macro_case).ljust(32)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %],
+        [[((enum.name | to_macro_case) + "_" + (k | to_macro_case)).ljust(32)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %],
 [%- endfor %]
     };
 [%- endfor %]
