--- a/cpp/type_info_template.j2
+++ b/cpp/type_info_template.j2
@@ -23,7 +23,9 @@ struct [[intf.fullname | to_pascal_case]]TypeInfo : TypeInfo {
     static Introspectable make_introspectable(T& obj) { return TypeInfo::make_introspectable(&obj, &singleton); }
 
     introspectable_storage_t get_child(introspectable_storage_t obj, size_t idx) const override {
+[%- if intf.get_all_attributes().values() | length  %]
         T* ptr = *(T**)&obj;
+[%- endif %]
         introspectable_storage_t res;
         switch (idx) {
 [%- for property in intf.get_all_attributes().values() %]
