--- a/cpp/interfaces_template.j2
+++ b/cpp/interfaces_template.j2
@@ -12,29 +12,51 @@
 #ifndef __FIBRE_INTERFACES_HPP
 #define __FIBRE_INTERFACES_HPP
 
+#include <stdint.h>
+#include <tuple>
+#include <fibre/../../property.hpp>
+
 [[userdata.c_preamble]]
 
-#include <fibre/../../protocol.hpp>
+[%- macro intf_name(intf) %]
+[%- if intf.builtin %]fibre::Property<[['const ' if intf.mode == 'readonly']][[type_name(intf.value_type)]]>
+[%- else %]
+[%- for elem in intf.name %][[elem | to_pascal_case]][['_' if not loop.last]][% endfor %]Intf
+[%- endif %]
+[%- endmacro %]
 
-#pragma GCC push_options
-#pragma GCC optimize ("s")
+[%- macro wrapper_name(intf) %]
+[%- if intf.builtin %]fibre::Property<[['const ' if intf.mode == 'readonly']][[type_name(intf.value_type)]]>
+[%- else %]
+[%- for elem in intf.name %][[elem | to_pascal_case]][['_' if not loop.last]][% endfor %]Wrapper
+[%- endif %]
+[%- endmacro %]
+
+[%- macro type_name(type) %]
+[%- if type.c_name %][[type.c_name]][% else %]unknown name for [[type]][% endif %]
+[%- endmacro %]
 
 [%- macro rettype(func) %]
 [%- if not func.out -%]
 void
 [%- elif func.out | length == 1 -%]
-[[(func.out.values() | first).type.c_name]]
+[[type_name((func.out.values() | first).type)]]
 [%- else -%]
-std::tuple<[% for arg in func.out.values() %][[arg.type.c_name]][[', ' if not loop.last]][% endfor %]>
+std::tuple<[% for arg in func.out.values() %][[type_name(arg.type)]][[', ' if not loop.last]][% endfor %]>
 [%- endif -%]
 [%- endmacro %]
 
-[%- macro render_interface(intf) %]
-class [[intf.name | to_pascal_case]]Intf[% if intf.implements %] :[%- for base_intf in intf.implements %] public [[base_intf.c_name]][% endfor %][% endif %] {
-public:
-[%- for intf in intf.interfaces -%]
-[[render_interface(intf) | indent(4)]]
+[% for intf in interfaces.values() %]
+[%- if not intf.builtin %]
+class [[intf_name(intf)]];
+template<typename T> class [[wrapper_name(intf)]];
+[%- endif %]
 [%- endfor %]
+
+[% for intf in interfaces.values() %]
+[%- if not intf.builtin %]
+class [[intf_name(intf)]][% if intf.implements %] :[%- for base_intf in intf.implements %] public [[base_intf.c_name]][% endfor %][% endif %] {
+public:
 [%- for enum in intf.enums %]
     enum [[enum.name | to_pascal_case]] {
 [%- for k, value in enum['values'].items() %]
@@ -43,43 +65,53 @@ public:
     };
 [%- endfor %]
 
-[%- for property in intf.attributes.values() %]
-[%- if property.type.fullname.startswith("fibre.Property") %]
-[%- if not property.c_getter and not property.c_setter %]
-    template<typename T> static inline auto get_[[property.name]](T* obj) { return [[property.type.c_name]]{&obj->[[property.c_name]]}; }
-    template<typename T> static inline void get_[[property.name]](T* obj, void* ptr) { new (ptr) [[property.type.c_name]]{&obj->[[property.c_name]]}; }[# these are for the set_endpoint_from_float function. This is unmaintainable and should go away #]
-[%- elif not property.c_setter %]
-    template<typename T> static inline auto get_[[property.name]](T* obj) { return [[property.type.c_name]]{obj, [](void* ctx){ return ([[property.type.value_type.c_name]])((T*)ctx)->[[property.c_getter]]; }}; }
-    template<typename T> static inline void get_[[property.name]](T* obj, void* ptr) { new (ptr) [[property.type.c_name]]{obj, [](void* ctx){ return ([[property.type.value_type.c_name]])((T*)ctx)->[[property.c_getter]]; }}; }
-[%- else %]
-    template<typename T> static inline auto get_[[property.name]](T* obj) { return [[property.type.c_name]]{obj, [](void* ctx){ return ([[property.type.value_type.c_name]])((T*)ctx)->[[property.c_getter]]; }, [](void* ctx, [[property.type.value_type.c_name]] value){ ((T*)ctx)->[[property.c_setter]](value); }}; }
-    template<typename T> static inline void get_[[property.name]](T* obj, void* ptr) { new (ptr) [[property.type.c_name]]{obj, [](void* ctx){ return ([[property.type.value_type.c_name]])((T*)ctx)->[[property.c_getter]]; }, [](void* ctx, [[property.type.value_type.c_name]] value){ ((T*)ctx)->[[property.c_setter]](value); }}; }
-[%- endif %]
-[%- else %]
-    template<typename T> static inline auto get_[[property.name]](T* obj) { return &obj->[%- if property.c_getter %][[property.c_getter]][% else %][[property.c_name]][% endif %]; }
-[%- endif %]
+[%- for func in intf.functions.values() %]
+    virtual [[rettype(func)]] [[func.name[-1]]]([% for name, in in func.in.items() %][% if loop.index0 %][[type_name(in.type)]] [[name]][[', ' if not loop.last]][% endif %][% endfor %]) = 0;
 [%- endfor %]
 
-[%- for func in intf.functions.values() %]
-    virtual [[rettype(func)]] [[func.name | to_snake_case]]([% for in in func.in.values() %][% if loop.index0 %][[in.type.c_name]] [[in.name]][[', ' if not loop.last]][% endif %][% endfor %]) = 0;
-[%- endfor %]
-[%- for func in intf.functions.values() %]
-[%- for k, arg in func.in.items() | skip_first %]
-    [[arg.type.c_name]] [[func.name | to_snake_case]]_in_[[arg.name]]_; // for internal use by Fibre
-    template<typename T> static auto get_[[func.name | to_snake_case]]_in_[[arg.name]]_(T* obj) { return Property<[[arg.type.c_name]]>{&obj->[[func.name | to_snake_case]]_in_[[arg.name]]_}; }
-    template<typename T> static void get_[[func.name | to_snake_case]]_in_[[arg.name]]_(T* obj, void* ptr) { new (ptr) Property<[[arg.type.c_name]]>{&obj->[[func.name | to_snake_case]]_in_[[arg.name]]_}; }
-[%- endfor %]
-[%- for k, arg in func.out.items() %]
-    [[arg.type.c_name]] [[func.name | to_snake_case]]_out_[[arg.name]]_; // for internal use by Fibre
-    template<typename T> static auto get_[[func.name | to_snake_case]]_out_[[arg.name]]_(T* obj) { return Property<const [[arg.type.c_name]]>{&obj->[[func.name | to_snake_case]]_out_[[arg.name]]_}; }
-    template<typename T> static void get_[[func.name | to_snake_case]]_out_[[arg.name]]_(T* obj, void* ptr) { new (ptr) Property<const [[arg.type.c_name]]>{&obj->[[func.name | to_snake_case]]_out_[[arg.name]]_}; }
-[%- endfor %]
+[%- for name, attr in intf.attributes.items() %]
+    virtual [[intf_name(attr.type)]]* get_[[name]]() = 0;
 [%- endfor %]
 };
-[%- endmacro %]
+[%- endif %]
+[% endfor %]
 
-[% for intf in toplevel_interfaces %]
-[[render_interface(intf)]]
+
+[% for intf in interfaces.values() %]
+[%- if not intf.builtin %]
+template<typename T>
+struct [[wrapper_name(intf)]] : [[intf_name(intf)]] {
+[%- for name, attr in intf.attributes.items() %]
+    template<typename U, typename TMem = decltype(std::declval<U>().[[name]]_)> static constexpr bool Has[[name | to_pascal_case]](int) { return true; }
+    template<typename U> static constexpr bool Has[[name | to_pascal_case]](...) { return false; }
+[%- endfor %]
+[%- for name, func in intf.functions.items() %]
+    template<typename U, typename TRet = decltype(([[rettype(func)]])std::declval<U>().[[name]]([% for name, in in func.in.items() %][% if loop.index0 %]std::declval<[[type_name(in.type)]]>()[[', ' if not loop.last]][% endif %][% endfor %]))> static constexpr bool Has[[name | to_pascal_case]](int) { return true; }
+    template<typename U> static constexpr bool Has[[name | to_pascal_case]](...) { return false; }
+[%- endfor %]
+
+    [[wrapper_name(intf)]](T& impl) : impl_(&impl) {}
+[% for name, attr in intf.attributes.items() %]
+    virtual [[intf_name(attr.type)]]* get_[[name]]() final {
+        static_assert(Has[[name | to_pascal_case]]<T>(0), "T cannot be cast to interface [[intf.name.get_fibre_name()]]: No member [[name]]_. See details below.");
+        return &[[name]]_;
+    }
+[% endfor %][% for name, func in intf.functions.items() %]
+    [[rettype(func)]] [[name]]([% for name, in in func.in.items() %][% if loop.index0 %][[type_name(in.type)]] [[name]][[', ' if not loop.last]][% endif %][% endfor %]) final {
+        static_assert(Has[[name | to_pascal_case]]<T>(0), "T cannot be cast to interface [[intf.name.get_fibre_name()]]: No matching overload for [[name]](). See details below.");
+        return impl_->[[name]]([% for name in func.in.keys() %][% if loop.index0 %][[name]][[', ' if not loop.last]][% endif %][% endfor %]);
+    }
+[% endfor %]
+    T* impl_;
+[%- for name, attr in intf.attributes.items() %]
+[%- if attr.type.builtin %]
+    [[wrapper_name(attr.type)]] [[name]]_{&impl_->[[name]]_};
+[%- else %]
+    [[wrapper_name(attr.type)]]<decltype(impl_->[[name]]_)> [[name]]_{impl_->[[name]]_};
+[%- endif %]
+[%- endfor %]
+};
+[%- endif %]
 [% endfor %]
 
 [%- for _, enum in value_types.items() %]
@@ -96,7 +128,5 @@ inline [[enum.c_name]] operator ~ ([[enum.c_name]] a) { return static_cast<[[enu
 [%- endfor %]
 
 
-
-#pragma GCC pop_options
 
 #endif // __FIBRE_INTERFACES_HPP
